--- a/index.html
+++ b/index.html
@@ -109,12 +109,29 @@
               exploration in PowerBI.
             </p>
           </header>
-          <a href="#" class="image main"
+          <a href="#" target="_blank" class="image main"
             ><img src="images/R&I_Dashboard.png" alt=""
           /></a>
 
           <ul class="actions special">
-            <li><a href="#" class="button large">View Project</a></li>
+            <li>
+              <a
+                href="https://app.powerbi.com/groups/me/reports/271d6673-fd28-4484-aed3-e5625af6364e/ReportSection"
+                target="_blank"
+                class="button large"
+                >View Project</a
+              >
+            </li>
+
+            <li>
+              <a
+                target="_blank"
+                href="#"
+                target="_blank"
+                class="button large icon brands alt fa-github"
+                >View in Github</a
+              >
+            </li>
           </ul>
         </article>
 
@@ -139,7 +156,15 @@
               cleaning practices.
             </p>
             <ul class="actions special">
-              <li><a href="#" class="button">View Project</a></li>
+              <!-- <li><a target="_blank" href="#" class="button">Project</a></li> -->
+              <li>
+                <a
+                  href="#"
+                  target="_blank"
+                  class="button icon brands alt fa-github"
+                  >View in github</a
+                >
+              </li>
             </ul>
           </article>
           <article>
@@ -160,7 +185,22 @@
               in Tableau.
             </p>
             <ul class="actions special">
-              <li><a href="#" class="button">View Project</a></li>
+              <li>
+                <a
+                  href="https://public.tableau.com/app/profile/sunil5173/viz/LTHTTableauDashboard/Dashboard1?publish=yes"
+                  target="_blank"
+                  class="button"
+                  >View Project</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  target="_blank"
+                  class="button icon brands alt fa-github"
+                  >View in github</a
+                >
+              </li>
             </ul>
           </article>
           <article>
