--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
 
             <li>
               <a
-                target="_blank"
-                href="#"
+                href="https://github.com/SunilNila/LTHT-StudyDashboard-PowerBI"
                 target="_blank"
                 class="button large icon brands alt fa-github"
                 >View in Github</a
