--- a/index.html
+++ b/index.html
@@ -222,6 +222,29 @@
               <li><a href="#" class="button">View Project</a></li>
             </ul>
           </article>
+
+          <article>
+            <header>
+              <h2>
+                <a href="#"
+                  >Research and Innovation - Amendment Emailer<br />
+                  - Python</a
+                >
+              </h2>
+            </header>
+            <a href="#" class="image fit"
+              ><img src="images/Amendment_Sender.png" alt=""
+            /></a>
+            <p>
+              Automating Research & Innovation work processes in Python.<br />
+              This project takes the required inputs and attachments for
+              acknowledging study amendments and automates this for a streamline
+              process.
+            </p>
+            <ul class="actions special">
+              <li><a href="#" class="button">View Project</a></li>
+            </ul>
+          </article>
         </section>
 
         <!-- Footer -->
