--- a/index.html
+++ b/index.html
@@ -100,21 +100,67 @@
             <!-- new -->
             <h2>
               <a href="#"
-                >Research & Innovation All Studies Dashboard<br />
+                >Research & Innovation Recruitment Performance Dashboard<br />
                 - Power BI
               </a>
             </h2>
          
             <p>
+              This dashboard can be used to view study participant activity from 2016 onwards.
+        Filters can be applied to select studies by Principal Investigator, Department/CSU and 
+        Financial Year to meet research delivery teams reporting requirements.
+              <br>Features of the dashboard include interactive charts/tables and study related filters to retrieve specific study recruitment metrics.
+               Buttons to navigate to additional pages, and an information section with a tutorial to be added soon.
+              <br>The data used for this dashboard has been extracted from EDGE, a research management
+              system and transformed within SQL Server.
+            </p>
+          </header>
+          <a href="#" target="_blank" class="image main"
+            ><img src="images/RecruitmentActivityDashboard.png" alt=""
+          /></a>
+          <ul class="actions special">
+            <li>
+              <a
+                href="https://app.powerbi.com/groups/me/reports/24026c86-a536-493e-baaf-0be272364390/ReportSection"
+                target="_blank"
+                class="button large"
+                >View Project</a
+              >
+            </li>
+
+            <li>
+              <a
+                href="https://app.powerbi.com/groups/me/reports/24026c86-a536-493e-baaf-0be272364390/ReportSection"
+                target="_blank"
+                class="button large icon brands alt fa-github"
+                >View in Github</a
+              >
+            </li>
+          </ul>
+        </article>
+
+        <!-- Posts -->
+        <section class="posts">
+
+
+<article>
+            <h2>
+              <a href="#"
+                >Research & Innovation All Studies Dashboard<br />
+                - Power BI
+              </a>
+            </h2>
+          
+          </header>
+          <a href="#" target="_blank" class="image main"
+            ><img src="images/AllStudiesDashboard.png" alt=""
+          /></a>
+  <p>
               This dashboard can be used to generate quick lists of studies to meet various different reporting
               requirements from research delivery teams. <br>Features of the dasboard include a filter and clear buttons, an information section, a tutorial is to be added soon.
               The data used for this dashboard has been extracted from EDGE, a research management
               system and transformed within SQL Server.
             </p>
-          </header>
-          <a href="#" target="_blank" class="image main"
-            ><img src="images/AllStudiesDashboard.png" alt=""
-          /></a>
           <ul class="actions special">
             <li>
               <a
@@ -136,8 +182,7 @@
           </ul>
         </article>
 
-        <!-- Posts -->
-        <section class="posts">
+
 
 <article>
             <h2>
