--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
             <li>
               <a
-                href="https://app.powerbi.com/groups/me/reports/24026c86-a536-493e-baaf-0be272364390/ReportSection"
+                href="https://github.com/SunilNila/Study-Recruitment-Activity-Dashboard"
                 target="_blank"
                 class="button large icon brands alt fa-github"
                 >View in Github</a
