--- a/index.html
+++ b/index.html
@@ -183,6 +183,56 @@
         </article>
 
 
+<article>
+            <h2>
+              <a href="#"
+                >Apprenticeship Project<br> Sales Analysis Presentation<br />
+                - Microsoft Powerpoint / PDF
+              </a>
+            </h2>
+          
+          </header>
+          <a href="#" target="images/WW_Cover.JPG" class="image main"
+            ><img src="images/WW_Cover.JPG" alt=""
+          /></a>
+
+           <a href="#" target="_blank" class="image main"
+            ><img src="images/WW_LeastSold.JPG" alt=""
+          /></a>
+  <p style="font-size: 14px">
+    As part of my Data Science Apprenticeship, I was provided with historic sales data from an online retailer and was tasked to provide analysis and a presentation from the data.           
+    <br> 
+    <br /> KPI's within my analysis include:
+     <br>Most and least sold products(identifying price points of these deliverables).
+     <br>Most and least profitable products(identifying price points of these deliverables).
+     <br>Visualising monthly and yearly sales trends.
+     <br>Analysing revenue percentage change by month and year.
+     <br>Forecasting future sales using the Holt-Winter model.
+      <br>
+     <br>I used Google Collabs within this project for data analysis, visualisations, forecasting and linear regression.
+     The final presentation can be viewed as a pdf and the datasets and Collab notebooks are available within my GitHub.  
+              </p>
+          <ul class="actions special">
+            <li>
+              <a
+                href="images/WideWorldImporters Sales Analysis.pdf"
+                target="_blank"
+                class="button large"
+                >View Project</a
+              >
+            </li>
+
+            <li>
+              <a
+                href="https://github.com/SunilNila/Data-Science-Apprenticeship-Project---WorldWideImporters-Sales-Analysis"
+                target="_blank"
+                class="button large icon brands alt fa-github"
+                >View in Github</a
+              >
+            </li>
+          </ul>
+        </article>
+
 
 <article>
             <h2>
@@ -221,6 +271,8 @@
             </li>
           </ul>
         </article>
+
+
 
           <article>
             <header>
